--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-markdown": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
     "remark": "^15.0.1",
-    "remark-html": "^15.0.2"
+    "remark-html": "^15.0.2",
+    "sweetalert": "^2.1.2"
   },
   "engines": {
     "node": ">=18"
